Modify wrong words

--- a/books/Managing_Your_Biological_Data_with_Python/ch10.ipynb
+++ b/books/Managing_Your_Biological_Data_with_Python/ch10.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:321011b4417a93b3abd89b0bbfb9ed5ec04cb5efff09d2527c65daf1af3749c0"
+  "signature": "sha256:1eb04c643c6c4e4a0d9b4125c0a619ea28922f13c6be2c49592884defe8bab4a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,7 +12,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "# Devide a Program into Functions\n",
+      "# 10. Devide a Program into Functions\n",
       "\n",
       "## III Modular Programming Introduction\n",
       "\n",
@@ -192,7 +192,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -584,7 +584,7 @@
       "def my_function(arg1, arg2, \u22ef):\n",
       "    '''documentation'''\n",
       "    <instructions>\n",
-      "    return value1, value, \u22ef\n",
+      "    return value1, value2, \u22ef\n",
       "```\n",
       "\n",
       "```python\n",
@@ -687,11 +687,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Overwriting tmp/my_range.py\n"
+        "Writing tmp/my_range.py\n"
        ]
       }
      ],
-     "prompt_number": 46
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -722,7 +722,7 @@
        ]
       }
      ],
-     "prompt_number": 47
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -745,7 +745,7 @@
        ]
       }
      ],
-     "prompt_number": 48
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -822,12 +822,12 @@
      "collapsed": false,
      "input": [
       "def f(a, b):\n",
-      "    return a + b, a * b, a- b"
+      "    return a + b, a * b, a - b"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 51
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -841,13 +841,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 52,
+       "prompt_number": 14,
        "text": [
         "(25, 150, -5)"
        ]
       }
      ],
-     "prompt_number": 52
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -1037,12 +1037,13 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def f(x): return x**2"
+      "def f(x): \n",
+      "    return x**2"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 62
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -1061,7 +1062,7 @@
        ]
       }
      ],
-     "prompt_number": 63
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -1072,7 +1073,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 64
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -1091,7 +1092,7 @@
        ]
       }
      ],
-     "prompt_number": 65
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -1105,13 +1106,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 67,
+       "prompt_number": 19,
        "text": [
         "64"
        ]
       }
      ],
-     "prompt_number": 67
+     "prompt_number": 19
     },
     {
      "cell_type": "markdown",
@@ -1472,7 +1473,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 113
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -1483,7 +1484,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 114
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -1494,23 +1495,13 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 115
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "col = struct.unpack(format, line)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 116
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
+      "col = struct.unpack(format, line)\n",
       "col"
      ],
      "language": "python",
@@ -1519,13 +1510,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 117,
+       "prompt_number": 18,
        "text": [
         "('1', '23', '4', '5')"
        ]
       }
      ],
-     "prompt_number": 117
+     "prompt_number": 18
     },
     {
      "cell_type": "markdown",
