--- a/books/Managing_Your_Biological_Data_with_Python/ch12.ipynb
+++ b/books/Managing_Your_Biological_Data_with_Python/ch12.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1eee5cdcae892989c3aaa2164c30993fe17c32b5d9021ffda49a7d1e4f99e3fe"
+  "signature": "sha256:c6781e285707e24bc1e767ebfdfad42da78f56889c205d2fc46384253f1ec579"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -10,7 +10,11 @@
    "cells": [
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "# Debugging\n",
       "\n",
@@ -18,15 +22,77 @@
       "\n",
       "![bug](files/images/bug.jpg)\n",
       "\n",
-      "- [de](http://endic.naver.com/enkrEntry.nhn?sLn=kr&entryId=907af793f48f4581b6b498330124e0c1&query=de): '\ubc18\ub300'\ub97c \ub73b\ud558\ub294 \uc811\ub450\uc0ac\n",
-      "\n",
-      "\n",
+      "- [de](http://endic.naver.com/enkrEntry.nhn?sLn=kr&entryId=907af793f48f4581b6b498330124e0c1&query=de): '\ubc18\ub300'\ub97c \ub73b\ud558\ub294 \uc811\ub450\uc0ac"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
       "- debugging view in bio\n",
-      "![debugging view in bio](files/images/debug.jpeg)\n",
-      "\n",
+      "![debugging view in bio](files/images/debug.jpeg)"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
       "- debugging view in program\n",
-      "![debugging view in program](files/images/debug_matrix.jpg)\n",
-      "\n",
+      "![debugging view in program](files/images/debug_matrix.jpg)"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from IPython.display import YouTubeVideo\n",
+      "YouTubeVideo('EWOIf0_tCnk')"
+     ],
+     "language": "python",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "outputs": [
+      {
+       "html": [
+        "\n",
+        "        <iframe\n",
+        "            width=\"400\"\n",
+        "            height=300\"\n",
+        "            src=\"https://www.youtube.com/embed/EWOIf0_tCnk\"\n",
+        "            frameborder=\"0\"\n",
+        "            allowfullscreen\n",
+        "        ></iframe>\n",
+        "        "
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 1,
+       "text": [
+        "<IPython.lib.display.YouTubeVideo at 0x1058d6510>"
+       ]
+      }
+     ],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
       "## 12.1 You will learn\n",
       "\n",
       "- What to do when your program does not work\n",
@@ -45,7 +111,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
      "source": [
       "### BOX 12.1 ASK FOR HELP\n",
       "\n",
@@ -108,23 +178,12 @@
       "primary, secondary = read_data('12-debugging/neuron_data.txt')\n",
       "count_pri = evaluate_data(primary)\n",
       "count_sec = evaluate_data(secondary)\n",
-      "write_output_file('12-debugging/results.txt', count_pri, count_sec)"
+      "write_output('12-debugging/results.txt', count_pri, count_sec)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "NameError",
-       "evalue": "name 'write_output_file' is not defined",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-15-e355adcef24f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[0mcount_pri\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mevaluate_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprimary\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0mcount_sec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mevaluate_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msecondary\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m \u001b[0mwrite_output_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'12-debugging/results.txt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcount_pri\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcount_sec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[0;31mNameError\u001b[0m: name 'write_output_file' is not defined"
-       ]
-      }
-     ],
-     "prompt_number": 15
+     "outputs": [],
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -339,7 +398,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "### NameError\ub974 \ubd84\uc11d\ud560 \uc218 \uc788\ub294 \uc26c\uc6b4 \ubc29\ubc95\uc740\n",
+      "### NameError\ub97c \ubd84\uc11d\ud560 \uc218 \uc788\ub294 \uc26c\uc6b4 \ubc29\ubc95\uc740\n",
       "\n",
       "```python\n",
       "print dir()\n",
@@ -447,18 +506,26 @@
       "        output.write('category <100 100-300 >300\\n')\n",
       "        output.write('Primary : %5i %5i %5i\\n' % count_pri)\n",
       "        output.write('Secondary: %5i %5i %5i\\n' % count_sec)\n",
-      "        output.close()\n",
       "        \n",
       "primary, secondary = read_data('12-debugging/neuron_data.txt')\n",
       "count_pri = evaluate_data(primary)\n",
+      "print count_pri\n",
       "count_sec = evaluate_data(secondary)\n",
       "write_output('12-debugging/results.txt', count_pri, count_sec)\n",
       "        "
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 7
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "(2, 2, 1)\n"
+       ]
+      }
+     ],
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -541,7 +608,11 @@
       "    a = float(raw_input('Insert a number:'))\n",
       "    print a\n",
       "except ValueError:\n",
-      "    print \"You haven't inserted a number. Please retry.\""
+      "    print \"You haven't inserted a number. Please retry.\"\n",
+      "except ArithmeticError, e:\n",
+      "    print 'ArithmeticError', e\n",
+      "except Exception as e:\n",
+      "    print e"
      ],
      "language": "python",
      "metadata": {},
@@ -551,18 +622,81 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Insert a number:1\n"
+        "Insert a number:aaa\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "1.0\n"
+        "You haven't inserted a number. Please retry.\n"
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 15
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a = float(raw_input('Insert a number:'))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "name": "stdout",
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Insert a number:AA\n"
+       ]
+      },
+      {
+       "ename": "ValueError",
+       "evalue": "could not convert string to float: AA",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-17-a808eed9f169>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraw_input\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Insert a number:'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;31mValueError\u001b[0m: could not convert string to float: AA"
+       ]
+      }
+     ],
+     "prompt_number": 17
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "try:\n",
+      "    a = float(raw_input('Insert a number:'))\n",
+      "    print a\n",
+      "except ValueError as e:\n",
+      "    print 'value error', e\n",
+      "except Exception as e:\n",
+      "    print e"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "name": "stdout",
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Insert a number:aaa\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "value error could not convert string to float: aaa\n"
+       ]
+      }
+     ],
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -611,11 +745,11 @@
         "{\n",
         " \"metadata\": {\n",
         "  \"name\": \"\",\n",
-        "  \"signature\": \"sha256:321011b4417a93b3abd89b0bbfb9ed5ec04cb5efff09d2\n"
+        "  \"signature\": \"sha256:20a3a0e2c55488f434134048b0d78a86c0fe660d588f1b\n"
        ]
       }
      ],
-     "prompt_number": 25
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
@@ -693,7 +827,7 @@
       "2. excludes possibilities\n",
       "3. draw logical conclusion\n",
       "\n",
-      "#### How to invetigate the program in programming\n",
+      "#### How to investigate the program in programming\n",
       "\n",
       "- function A, function C: ok\n",
       "- problem: function B\n",
