--- a/books/Managing_Your_Biological_Data_with_Python/ch15.ipynb
+++ b/books/Managing_Your_Biological_Data_with_Python/ch15.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:8a11072bbdc69aa12aab9f45c488024a07e5a3a7682f77a8c6f3b9e8bd5bf606"
+  "signature": "sha256:44f2655a46458637ac9b029af2d967b919a76ec56de2e8b574e84a32a740ffcc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -486,7 +486,7 @@
       "\n",
       "### comments\n",
       "\n",
-      "- #\uc774 \uc55e\uc5d0 \uc788\uc73c\uba74 \uc778\ud130\ud504\ub9ac\ud130\ub294 \ubb34\uc2dc\ud55c\ub2e4. \uadf8\ub798\uc11c \uc8fc\uc11d\uc774 \ub41c\ub2e4.\n",
+      "- \\#\uc774 \uc55e\uc5d0 \uc788\uc73c\uba74 \uc778\ud130\ud504\ub9ac\ud130\ub294 \ubb34\uc2dc\ud55c\ub2e4. \uadf8\ub798\uc11c \uc8fc\uc11d\uc774 \ub41c\ub2e4.\n",
       "- \uc8fc\uc11d\uc740 \uc9e7\uac8c \uc4f0\uace0 \uac00\uc7a5 \uc911\uc694\ud55c \uc815\ubcf4\ub97c \uc904 \uc218 \uc788\ub2e4.\n",
       "- \ud504\ub85c\uadf8\ub7a8\uc744 \uc218\uc815\ud558\uace0 \uc8fc\uc11d\ub3c4 \uac19\uc774 \uc218\uc815\ud558\uc790. \uadf8\ub807\uc9c0 \uc54a\uc73c\uba74 \ub098\uc911\uc5d0 \uc218\uc815\ud560 \ub54c \uad49\uc7a5\ud788 \ud5f7\uac08\ub9b4 \uc218 \uc788\ub2e4.\n",
       "\n",
@@ -616,6 +616,74 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "!cat 10-functions/calc_distance.py"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "'''\r",
+        "\r\n",
+        "\r",
+        "\r\n",
+        "Function to calculate distance between two coordinates.\r",
+        "\r\n",
+        "\r",
+        "\r\n",
+        "-----------------------------------------------------------\r",
+        "\r\n",
+        "(c) 2013 Allegra Via and Kristian Rother\r",
+        "\r\n",
+        "    Licensed under the conditions of the Python License\r",
+        "\r\n",
+        "\r",
+        "\r\n",
+        "    This code appears in section 10.4.1 of the book\r",
+        "\r\n",
+        "    \"Managing Biological Data with Python\".\r",
+        "\r\n",
+        "-----------------------------------------------------------\r",
+        "\r\n",
+        "'''\r",
+        "\r\n",
+        "\r",
+        "\r\n",
+        "from math import sqrt\r",
+        "\r\n",
+        "\r",
+        "\r\n",
+        "def calc_dist(p1, p2):\r",
+        "\r\n",
+        "    '''returns the distance between two 3D points'''\r",
+        "\r\n",
+        "    dx = p1[0] - p2[0]  \t\r",
+        "\r\n",
+        "    dy = p1[1] - p2[1]\r",
+        "\r\n",
+        "    dz = p1[2] - p2[2]\r",
+        "\r\n",
+        "    distsq = pow(dx, 2) + pow(dy, 2) + pow(dz, 2)\r",
+        "\r\n",
+        "    distance = sqrt(distsq)\r",
+        "\r\n",
+        "    return distance\r",
+        "\r\n",
+        "\r",
+        "\r\n",
+        "print calc_dist([3.0, 3.0, 3.0], [9.0, 9.0, 9.0])\r",
+        "\r\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "import sys\n",
       "sys.path.append('/Users/re4lfl0w/Documents/ipython/books/Managing_Your_Biological_Data_with_Python/10-functions/')\n",
       "import calc_distance"
@@ -631,7 +699,74 @@
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from pprint import pprint"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "pprint(sys.path)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "['',\n",
+        " '/Library/Python/2.7/site-packages/pip-1.4-py2.7.egg',\n",
+        " '/Library/Python/2.7/site-packages/beautifulsoup4-4.2.1-py2.7.egg',\n",
+        " '/Library/Python/2.7/site-packages/matplotlib-1.4.x-py2.7-macosx-10.8-intel.egg',\n",
+        " '/Library/Python/2.7/site-packages/numpy-1.9.0.dev_c50e60d-py2.7-macosx-10.8-x86_64.egg',\n",
+        " '/Library/Python/2.7/site-packages/pandas-0.12.0_307_g3a2fe0b-py2.7-macosx-10.8-intel.egg',\n",
+        " '/Library/Python/2.7/site-packages/pymc-2.2-py2.7-macosx-10.8-intel.egg',\n",
+        " '/Library/Python/2.7/site-packages/scipy-0.14.0.dev_2a4ba40-py2.7-macosx-10.8-intel.egg',\n",
+        " '/Library/Python/2.7/site-packages/statsmodels-0.6.0-py2.7-macosx-10.8-intel.egg',\n",
+        " '/Library/Python/2.7/site-packages/readline-6.2.4.1-py2.7-macosx-10.7-intel.egg',\n",
+        " '/Library/Python/2.7/site-packages/pyparsing-1.5.7-py2.7.egg',\n",
+        " '/Library/Python/2.7/site-packages/tornado-3.1.1-py2.7.egg',\n",
+        " '/Library/Python/2.7/site-packages/pyzmq-13.1.0-py2.7-macosx-10.6-intel.egg',\n",
+        " '/Library/Python/2.7/site-packages/pika-0.9.13-py2.7.egg',\n",
+        " '/Library/Python/2.7/site-packages/patsy-0.2.1-py2.7.egg',\n",
+        " '/Library/Python/2.7/site-packages/Pygments-1.6-py2.7.egg',\n",
+        " '/Library/Python/2.7/site-packages/Sphinx-1.2b1-py2.7.egg',\n",
+        " '/Library/Python/2.7/site-packages/html5lib-1.0b3-py2.7.egg',\n",
+        " '/Library/Python/2.7/site-packages/lxml-3.2.3-py2.7-macosx-10.8-intel.egg',\n",
+        " '/Library/Python/2.7/site-packages/egenix_mx_experimental-3.0.0-py2.7-macosx-10.8-intel.egg',\n",
+        " '/Library/Python/2.7/site-packages/twitter-1.10.2-py2.7.egg',\n",
+        " '/Users/re4lfl0w/Documents/ipython_private/scripts',\n",
+        " '/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python27.zip',\n",
+        " '/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7',\n",
+        " '/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/plat-darwin',\n",
+        " '/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/plat-mac',\n",
+        " '/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/plat-mac/lib-scriptpackages',\n",
+        " '/System/Library/Frameworks/Python.framework/Versions/2.7/Extras/lib/python',\n",
+        " '/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/lib-tk',\n",
+        " '/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/lib-old',\n",
+        " '/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/lib-dynload',\n",
+        " '/System/Library/Frameworks/Python.framework/Versions/2.7/Extras/lib/python/PyObjC',\n",
+        " '/Library/Python/2.7/site-packages',\n",
+        " '/Library/Python/2.7/site-packages/PIL',\n",
+        " '/Library/Python/2.7/site-packages/IPython/extensions',\n",
+        " '/Users/re4lfl0w/.ipython',\n",
+        " '/Users/re4lfl0w/Documents/ipython_private/scripts/',\n",
+        " '/Users/re4lfl0w/Documents/ipython/books/Managing_Your_Biological_Data_with_Python/10-functions/']\n"
+       ]
+      }
+     ],
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -883,6 +1018,100 @@
       "\n",
       "### Exercise 15.5 Run pylint"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "l = range(10)\n",
+      "l"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 1,
+       "text": [
+        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+       ]
+      }
+     ],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from itertools import islice"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "list(islice(l, 3))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 4,
+       "text": [
+        "[0, 1, 2]"
+       ]
+      }
+     ],
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "islice??"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from collections import deque"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "deque(l, maxlen=2)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 9,
+       "text": [
+        "deque([8, 9], maxlen=2)"
+       ]
+      }
+     ],
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
